# esp32_aws_mqtt

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  SIM7600E_README.md  build.bat  build.sh  build_sim7600e.bat  build_wifi.bat  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.template  sdkconfig.old
.github/: copilot-instructions.md
certificates/: aws_root_ca.pem  aws_root_ca.pem.template  device_cert.pem  device_cert.pem.template  device_private_key.pem.template
main/: CMakeLists.txt  aws_iot_client.c  aws_iot_config.h  aws_iot_config_sim7600e.h  aws_iot_sim7600e.c  certificate_manager.c  certificate_manager.h  certificate_manager_sim7600e.c  certificate_manager_sim7600e.h  device_shadow.c  device_shadow.h  device_shadow_sim7600e.c  device_shadow_sim7600e.h  wifi_manager.c  wifi_manager.h
scripts/: monitor.ps1  setup_aws_iot.ps1  test_mqtt.ps1
